--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -7,7 +6,6 @@
     <title>Manga Gallery</title>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600&display=swap" rel="stylesheet">
     <style>
-        
         body {
             font-family: 'Poppins', sans-serif;
             background: linear-gradient(135deg, #e3e3e3 0%, #c1c1c1 100%);
@@ -126,6 +124,10 @@
             color: #333;
             text-align: center;
         }
+        .error-message {
+            color: red;
+            margin: 20px;
+        }
         footer {
             text-align: center;
             padding: 20px;
@@ -185,6 +187,7 @@
             <input type="text" id="searchInput" placeholder="Search for manga...">
             <button id="searchButton">Search</button>
         </div>
+        <div id="errorMessage" class="error-message"></div>
         <div id="mangaList" class="manga-list"></div>
     </main>
     <footer>
@@ -201,17 +204,22 @@
             const apiUrl = `https://ab-manga-api.vercel.app/manga?page=${page}`;
 
             fetch(proxyUrl + encodeURIComponent(apiUrl))
-                .then(response => response.json())
+                .then(response => {
+                    if (!response.ok) {
+                        throw new Error(`HTTP error! status: ${response.status}`);
+                    }
+                    return response.json();
+                })
                 .then(data => {
-                    console.log('Fetched manga data:', data); 
                     if (Array.isArray(data)) {
+                        console.log(`Fetched ${data.length} manga items`);
                         displayManga(data);
                     } else {
                         handleError('Data format is incorrect.');
                     }
                 })
                 .catch(error => {
-                    handleError(error);
+                    handleError(`Error fetching manga: ${error.message}`);
                 });
         }
 
@@ -222,20 +230,26 @@
             if (query) {
                 const apiUrl = `https://ab-manga-api.vercel.app/search/${encodeURIComponent(query)}`;
                 fetch(proxyUrl + encodeURIComponent(apiUrl))
-                    .then(response => response.json())
+                    .then(response => {
+                        if (!response.ok) {
+                            throw new Error(`HTTP error! status: ${response.status}`);
+                        }
+                        return response.json();
+                    })
                     .then(data => {
-                        console.log('Searched manga data:', data); 
                         if (Array.isArray(data)) {
+                            console.log(`Searched ${data.length} manga items for query "${query}"`);
                             displayManga(data);
                         } else {
                             handleError('Search returned incorrect data format.');
                         }
                     })
                     .catch(error => {
-                        handleError(error);
+                        handleError(`Error searching manga: ${error.message}`);
                     });
             } else {
-                fetchManga();
+                fetchManga(); // Fetch all manga if the query is empty
+                clearError(); // Clear any previous error messages
             }
         }
 
@@ -247,8 +261,8 @@
                 const mangaItem = document.createElement('div');
                 mangaItem.className = 'manga-item';
 
-                
-                console.log(`Displaying: ${manga.title}, Cover URL: ${manga.cover}`);
+                // Logging specific properties: title and cover
+                console.log(`Displaying: Title: "${manga.title}", Cover URL: "${manga.cover}"`);
 
                 mangaItem.innerHTML = `
                     <a href="manga-info.html?id=${manga.id}">
@@ -263,7 +277,11 @@
 
         function handleError(error) {
             console.error('Error fetching data:', error);
-            document.getElementById('mangaList').innerHTML = '<p>Error fetching data. Please try again later.</p>';
+            document.getElementById('errorMessage').innerText = error; // Display the error message
+        }
+
+        function clearError() {
+            document.getElementById('errorMessage').innerText = ''; // Clear any previous error messages
         }
     </script>
 </body>
