--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
             box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
         }
         header h1 {
+            font-family: 'Poppins', sans-serif;
             font-size: 24px;
             letter-spacing: 1px;
         }
@@ -100,6 +101,8 @@
             grid-template-columns: repeat(auto-fill, minmax(180px, 1fr));
             gap: 30px;
             width: 100%;
+            transition: opacity 0.5s; /* Smooth transition */
+            opacity: 1;
         }
         .manga-item {
             border: none;
@@ -188,97 +191,79 @@
     <footer>
         <p>© 2024 AB ANIME. All rights reserved.</p>
     </footer>
-<script>
-    document.addEventListener('DOMContentLoaded', () => {
-        fetchManga(); 
-        document.getElementById('searchButton').addEventListener('click', searchManga);
-    });
 
-    function fetchManga(page = 1) {
-        const proxyUrl = `https://worker-tight-lake-a297.abrahamdw882.workers.dev/?u=`;
-        const apiUrl = `https://ab-manga-api.vercel.app/manga?page=${page}`;
+    <script>
+        let page = 1;
+        let isLoading = false;
 
-        fetch(proxyUrl + encodeURIComponent(apiUrl))
-            .then(response => response.json())
-            .then(data => {
-                console.log('Fetched manga data:', data); 
-                if (Array.isArray(data)) {
-                    displayManga(data);
-                } else {
-                    handleError('Data format is incorrect.');
-                }
-            })
-            .catch(error => {
-                handleError(error);
-            });
-    }
+        document.addEventListener('DOMContentLoaded', () => {
+            fetchManga();
+            document.getElementById('searchButton').addEventListener('click', searchManga);
+        });
 
-    function searchManga() {
-        const query = document.getElementById('searchInput').value.trim();
-        const proxyUrl = `https://worker-tight-lake-a297.abrahamdw882.workers.dev/?u=`;
+        function fetchManga(page = 1) {
+            const proxyUrl = `https://worker-tight-lake-a297.abrahamdw882.workers.dev/?u=`;
+            const apiUrl = `https://ab-manga-api.vercel.app/manga?page=${page}`;
 
-        if (query) {
-            const apiUrl = `https://ab-manga-api.vercel.app/search/${encodeURIComponent(query)}`;
             fetch(proxyUrl + encodeURIComponent(apiUrl))
                 .then(response => response.json())
-                .then(data => {
-                    console.log('Searched manga data:', data); 
-                    if (Array.isArray(data)) {
-                        displayManga(data);
-                    } else {
-                        handleError('Search returned incorrect data format.');
-                    }
-                })
-                .catch(error => {
-                    handleError(error);
-                });
-        } else {
-            fetchManga();
+                .then(data => displayManga(data))
+                .catch(handleError);
         }
-    }
 
-    function displayManga(data) {
-        const mangaList = document.getElementById('mangaList');
-        mangaList.innerHTML = ''; 
+        function searchManga() {
+            const query = document.getElementById('searchInput').value.trim();
+            const proxyUrl = `https://worker-tight-lake-a297.abrahamdw882.workers.dev/?u=`;
 
-        data.forEach(manga => {
-            const mangaItem = document.createElement('div');
-            mangaItem.className = 'manga-item';
-
-            // Extract cover image URL
-            const coverUrl = extractCoverUrl(manga);
-
-            if (coverUrl) {
-                console.log(`Displaying: ${manga.title}, Cover URL: ${coverUrl}`);
-
-                mangaItem.innerHTML = `
-                    <a href="manga-info.html?id=${manga.id}">
-                        <img src="${coverUrl}" alt="${manga.title}">
-                        <h3>${manga.title}</h3>
-                    </a>
-                `;
+            if (query) {
+                const apiUrl = `https://ab-manga-api.vercel.app/search/${encodeURIComponent(query)}`;
+                fetch(proxyUrl + encodeURIComponent(apiUrl))
+                    .then(response => response.json())
+                    .then(data => displayManga(data))
+                    .catch(handleError);
             } else {
-                console.error(`Cover image not found for manga: ${manga.title}`);
+                fetchManga();
             }
-
-            mangaList.appendChild(mangaItem);
-        });
-    }
-
-    function extractCoverUrl(manga) {
-        // Check if manga is an object and contains a cover property
-        if (typeof manga === 'object' && manga !== null) {
-            return manga.cover || null; // Return the cover URL if it exists
         }
-        return null; // Return null if no valid object is found
-    }
 
-    function handleError(error) {
-        console.error('Error fetching data:', error);
-        document.getElementById('mangaList').innerHTML = '<p>Error fetching data. Please try again later.</p>';
-    }
-</script>
+        function displayManga(data) {
+            const mangaList = document.getElementById('mangaList');
+            mangaList.style.opacity = 0; // Fade out
 
+            setTimeout(() => {
+                mangaList.innerHTML = ''; // Clear existing items
+                data.forEach(manga => {
+                    const mangaItem = document.createElement('div');
+                    mangaItem.className = 'manga-item';
+                    mangaItem.innerHTML = `
+                        <a href="manga-info.html?id=${manga.id}">
+                            <img src="${manga.cover}" alt="${manga.title}">
+                            <h3>${manga.title}</h3>
+                        </a>
+                    `;
+                    mangaList.appendChild(mangaItem);
+                });
+                mangaList.style.opacity = 1; // Fade in
+            }, 500); // Adjust this delay to match the CSS transition duration
+        }
 
+        window.addEventListener("scroll", function () {
+            const scrollPosition = window.scrollY;
+            const windowHeight = window.innerHeight;
+            const documentHeight = document.documentElement.scrollHeight;
+
+            if (scrollPosition + 3 * windowHeight >= documentHeight && !isLoading) {
+                isLoading = true;
+                page += 1;
+                fetchManga(page);
+                isLoading = false;
+            }
+        });
+
+        function handleError(error) {
+            console.error('Error:', error);
+            document.getElementById('mangaList').innerHTML = '<p>Error fetching data. Please try again later.</p>';
+        }
+    </script>
 </body>
 </html>
